--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Local .terraform directories
 **/.terraform/*
+**/.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
 
 # Crash log files
 crash.log
@@ -30,4 +32,4 @@ override.tf.json
 
 
 # Temp ignore
-*.json
+*-key.json
