Changed apply condition

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,7 +2,6 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
 
 permissions:
@@ -56,5 +55,5 @@ jobs:
 
     # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"'
+      if: if: github.event.pull_request.merged == true
       run: terraform apply -auto-approve -input=false
