Fixed condition statement

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -55,5 +55,5 @@ jobs:
 
     # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      if: if: github.event.pull_request.merged == true
+      if: github.event.pull_request.merged == true
       run: terraform apply -auto-approve -input=false
