--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -56,5 +56,5 @@ jobs:
 
     # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"'
+      if: github.event.pull_request.merged == true
       run: terraform apply -auto-approve -input=false
