--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Print
-      run: echo ${{ github.ref }}, ${{ github.event.pull_request }}
+      run: echo ${{ github.ref }}, ${{ github.event }}
 
     # Authenticate to GCP
     - id: 'auth'
@@ -59,5 +59,5 @@ jobs:
 
     # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      if: github.event.pull_request.merged == true
+      if: github.ref == 'refs/heads/main'
       run: terraform apply -auto-approve -input=false
