--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Print
-      run: echo ${{ github.ref }}, ${{ github.event }}
+      run: echo ${{ github.ref }}, ${{ github.event.push }}
 
     # Authenticate to GCP
     - id: 'auth'
