Added current branch to event triggers

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,7 +3,7 @@ name: 'Terraform'
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "manual-deploy" ]
   pull_request:
 
 permissions:
