fix: removed SA reference

--- a/backend/analytical-service/.devcontainer/devcontainer.env
+++ b/backend/analytical-service/.devcontainer/devcontainer.env
@@ -1,2 +1,2 @@
-SERVICE_NAME=Analytical service
-GOOGLE_APPLICATION_CREDENTIALS=../../app-engine-sa.json
+SERVICE_NAME=analytics
+GOOGLE_APPLICATION_CREDENTIALS=SERVICE_ACCOUNT_KEY_PATH
