--- a/backend/metadata-service/.devcontainer/devcontainer.env
+++ b/backend/metadata-service/.devcontainer/devcontainer.env
@@ -1,2 +1,2 @@
-SERVICE_NAME=Metadata service
-GOOGLE_APPLICATION_CREDENTIALS=../../app-engine-sa.json
+SERVICE_NAME=metadata
+GOOGLE_APPLICATION_CREDENTIALS=SERVICE_ACCOUNT_KEY_PATH
