Backend/analytics service (#10)
* feat: Metadata service dependencies and configurations

* feat: Metadata service application core code

* feat: Metadata service application unit tests

* feat: Analytical service dependencies and configurations

* feat: Added analytics base configuration

* feat: Added SQL query builder

* feat: Analytical service application unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,9 @@ override.tf.json
 __pycache__
 .pytest_cache
 
-# Ignore GCP service account
-app-engine-sa.json
+
+# Ignore devcontainers
+backend/*/.devcontainer/*.env
+
+# Ignore unit testing track files
+**/.coverage
